--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,13 +7,11 @@
   <body>
 
     <div class="content">
-      <span id="body" data-jiis="bp">
-        <center>
-        </center>
-
+      <div ng-view></div>
     </div>
 
-    <script src="http://120.26.209.92/bower_components/angular-route/angular-route.min.js"></script>
-    <script src="http://120.26.209.92/bower_components/angular/angular.min.js" /></script>
+    <script src="bower_components/angular/angular.min.js" /></script>
+    <script src="bower_components/angular-route/angular-route.min.js"></script>
+    <script src="application/entry.js"></script>
   </body>
 </html>
