--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,7 +30,7 @@
     <script src="bower_components/angular/angular.min.js" /></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/devbridge-autocomplete/dist/jquery.autocomplete.min.js"></script>
+    <script src="bower_components/devbridge-autocomplete/dist/jquery.autocomplete.js"></script>
     <script src="application/entry.js"></script>
 
   </body>
