add page result directive

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,10 +9,6 @@
       <nav class="navbar navbar-default navbar-fixed-top">
       </nav>
 
-      <job-searcher>
-        <job-form>
-        </job-form>
-      </job-searcher>
     </header>
 
     <div class="content">
@@ -27,10 +23,10 @@
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="application/css/index.css">
-    <script src="bower_components/angular/angular.min.js" /></script>
+    <script src="bower_components/angular/angular.js" /></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/devbridge-autocomplete/dist/jquery.autocomplete.js"></script>
+    <script src="bower_components/devbridge-autocomplete/dist/jquery.autocomplete.min.js"></script>
     <script src="application/entry.js"></script>
 
   </body>
