--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
   <body>
     <header>
       <nav class="navbar navbar-default navbar-fixed-top">
+        <img src="static/logo_nav.png" style="cursor: pointer; float:left;margin-top: 12px;"></img>
       </nav>
 
     </header>
