--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="application/css/index.css">
-    <script src="bower_components/angular/angular.js" /></script>
+    <script src="bower_components/angular/angular.min.js" /></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/devbridge-autocomplete/dist/jquery.autocomplete.min.js"></script>
