--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,8 @@
 <html ng-app="careerApp">
   <head>
     <meta charset="utf-8">
-    <title>用武</title>
+    <link rel="shortcut icon" href="favicon.ico" /> 
+    <title>用武不论英雄</title>
   </head>
   <body>
     <div class="content">
