--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,15 @@
     <title>用武不论英雄</title>
   </head>
   <body>
+
+    <!-- navigation bar -->
+    <header>
+      <nav class="">
+        <img src="static/logo_nav.png" class="logo-nav-left"></img>
+        <a class="login-button" href="#/register">登录</a>
+      </nav>
+    </header>
+
     <div class="content">
       <div ng-view></div>
     </div>
